main/src/main/java/com/example/main/exception/errors/ForbiddenOperationException.java
package com.example.main.exception.errors;

public class ForbiddenOperationException extends RuntimeException {
    public ForbiddenOperationException(String message) {
        super(message);
    }
}